// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tabs Compact 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 cXmCLE StyledTabs-a4fwxl-2 bHEVkg sc-fyzkxf gzxomq sc-iXuBNu efPWuH"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kwvigv StyledTabs__StyledTabsHeader-a4fwxl-0 fhlfqL"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAsKMa StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hSAha-d"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              Tab 3
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              And this is a third very long tab name testing
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 dJfydw"
        role="tabpanel"
      >
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ vzbmN"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 cXmCLE StyledTabs-a4fwxl-2 bHEVkg sc-fyzkxf gEosOD sc-iXuBNu efPWuH"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kwvigv StyledTabs__StyledTabsHeader-a4fwxl-0 fhlfqL"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAsKMa StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hSAha-d"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              Tab 3
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 dJfydw"
        role="tabpanel"
      >
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ vzbmN"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs With Long Titles 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 cXmCLE StyledTabs-a4fwxl-2 bHEVkg sc-fyzkxf gEosOD sc-iXuBNu efPWuH"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kwvigv StyledTabs__StyledTabsHeader-a4fwxl-0 fhlfqL"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAsKMa StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hSAha-d"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 hQLlUp"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDXEJC StyledTab-sc-1nnwnsb-0 kijQFg"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iolwZw"
            >
              And this is a third very long tab name
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="This is a very long tab name Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 dJfydw"
        role="tabpanel"
      >
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ vzbmN"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;
